feat(Kanban): update Storybook dependencies and refactor imports

--- a/.storybook/stories/Colors.mdx
+++ b/.storybook/stories/Colors.mdx
@@ -1,4 +1,4 @@
-import { ColorItem, Meta } from '@storybook/blocks';
+import { ColorItem, Meta } from '@storybook/addon-docs/blocks';
 import { GlobalStyles, useTheme } from "@mui/material";
 import ThemeProvider from "@/context/Theme/ThemeProvider";
 
